Winner Screen logic

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="app_name">Pong</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">WINNER!!</string>
     <string name="menu_settings">Settings</string>
+    <string name="title_activity_winner">WinnerActivity</string>
 
 </resources>
